--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,9 @@ sponge-gradle-ore = { id = "org.spongepowered.gradle.ore", version.ref = "sponge
 run-paper = { id = "xyz.jpenilla.run-paper", version = "2.3.1" }
 hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.3" }
 javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = "0.0.16" }
+resource-factory-bukkit = { id = "xyz.jpenilla.resource-factory-bukkit-convention", version.ref = "resource-factory" }
+resource-factory-fabric = { id = "xyz.jpenilla.resource-factory-fabric-convention", version.ref = "resource-factory" }
+resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-convention", version.ref = "resource-factory" }
 
 [versions]
 minecraft = "1.21.5"
@@ -27,6 +30,7 @@ guice = "7.0.0"
 neoforge = "21.5.65-beta"
 neoform = "1.21.5-20250325.162830"
 htmlSanitizer = "20240325.1"
+resource-factory = "1.3.0"
 
 # buildSrc
 indra = "3.1.3"
