--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ resource-factory-fabric = { id = "xyz.jpenilla.resource-factory-fabric-conventio
 resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-convention", version.ref = "resource-factory" }
 
 [versions]
-minecraft = "1.21.6-pre3"
+minecraft = "1.21.6"
 checkerQual = "3.49.2"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -17,18 +17,18 @@ cloudProcessors = "1.0.0-beta.3"
 cloudModded = "2.0.0-beta.10"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.2.0"
-adventure = "4.21.0"
+adventure = "4.22.0"
 examination = "1.3.0"
 option = "1.1.0"
 adventurePlatformMod = "6.4.0"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.127.0+1.21.5"
+fabricApi = "0.127.0+1.21.6"
 fabricLoader = "0.16.14"
-cardinalComponents = "6.3.1"
+cardinalComponents = "7.0.0-beta.1"
 guice = "7.0.0"
 neoforge = "21.6.3-beta"
-neoform = "1.21.6-pre3-20250604.141722"
+neoform = "1.21.6-20250617.151856"
 htmlSanitizer = "20240325.1"
 resource-factory = "1.3.0"
 
