--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ checkerQual = "3.49.2"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
 cloudProcessors = "1.0.0-beta.3"
-cloudModded = "2.0.0-SNAPSHOT"
+cloudModded = "2.0.0-beta.11"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.2.0"
 adventure = "4.23.0"
