--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,26 +9,26 @@ resource-factory-fabric = { id = "xyz.jpenilla.resource-factory-fabric-conventio
 resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-convention", version.ref = "resource-factory" }
 
 [versions]
-minecraft = "1.21.5"
+minecraft = "1.21.6"
 checkerQual = "3.49.2"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
 cloudProcessors = "1.0.0-beta.3"
-cloudModded = "2.0.0-beta.10"
+cloudModded = "2.0.0-beta.11"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.2.0"
-adventure = "4.21.0"
+adventure = "4.23.0"
 examination = "1.3.0"
 option = "1.1.0"
-adventurePlatformMod = "6.4.0"
+adventurePlatformMod = "6.5.0-SNAPSHOT"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.127.0+1.21.5"
+fabricApi = "0.127.1+1.21.6"
 fabricLoader = "0.16.14"
-cardinalComponents = "6.3.1"
+cardinalComponents = "7.0.0-beta.1"
 guice = "7.0.0"
-neoforge = "21.5.75"
-neoform = "1.21.5-20250325.162830"
+neoforge = "21.6.11-beta"
+neoform = "1.21.6-20250617.151856"
 htmlSanitizer = "20240325.1"
 resource-factory = "1.3.0"
 
@@ -91,7 +91,7 @@ mixin = { group = "org.spongepowered", name = "mixin", version = "0.8.7" }
 
 fabricApi = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabricApi" }
 fabricLoader = { group = "net.fabricmc", name = "fabric-loader", version.ref = "fabricLoader" }
-fabricPermissionsApi = "me.lucko:fabric-permissions-api:0.3.3"
+fabricPermissionsApi = "me.lucko:fabric-permissions-api:0.4.0"
 
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
 
