--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ resource-factory-fabric = { id = "xyz.jpenilla.resource-factory-fabric-conventio
 resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-convention", version.ref = "resource-factory" }
 
 [versions]
-minecraft = "1.21.6"
+minecraft = "1.21.7-rc2"
 checkerQual = "3.49.4"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -23,12 +23,12 @@ option = "1.1.0"
 adventurePlatformMod = "6.5.0-SNAPSHOT"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.128.1+1.21.6"
+fabricApi = "0.128.1+1.21.7"
 fabricLoader = "0.16.14"
 cardinalComponents = "7.0.0-beta.1"
 guice = "7.0.0"
 neoforge = "21.6.20-beta"
-neoform = "1.21.6-20250617.151856"
+neoform = "1.21.7-rc2-20250626.145635"
 htmlSanitizer = "20240325.1"
 resource-factory = "1.3.0"
 
