--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ resource-factory-fabric = { id = "xyz.jpenilla.resource-factory-fabric-conventio
 resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-convention", version.ref = "resource-factory" }
 
 [versions]
-minecraft = "1.21.7-rc2"
+minecraft = "1.21.7"
 checkerQual = "3.49.4"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -27,19 +27,19 @@ fabricApi = "0.128.1+1.21.7"
 fabricLoader = "0.16.14"
 cardinalComponents = "7.0.0-beta.1"
 guice = "7.0.0"
-neoforge = "21.6.20-beta"
-neoform = "1.21.7-rc2-20250626.145635"
+neoforge = "21.7.4-beta"
+neoform = "1.21.7-20250630.141722"
 htmlSanitizer = "20240325.1"
 resource-factory = "1.3.0"
 
 # buildSrc
 indra = "3.1.3"
 sponge-gradle = "2.3.0"
-shadow = "8.3.7"
+shadow = "8.3.8"
 mod-publish-plugin = "0.8.4"
-loom = "1.10-SNAPSHOT"
-mdg = "2.0.96"
-paperweight = "2.0.0-beta.17"
+loom = "1.11-SNAPSHOT"
+mdg = "2.0.99"
+paperweight = "2.0.0-beta.18"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
