--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ resource-factory-fabric = { id = "xyz.jpenilla.resource-factory-fabric-conventio
 resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-convention", version.ref = "resource-factory" }
 
 [versions]
-minecraft = "1.21.8"
+minecraft = "1.21.9"
 checkerQual = "3.50.0"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -16,18 +16,18 @@ cloudProcessors = "1.0.0-rc.1"
 cloudModded = "2.0.0-beta.11"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.2.0"
-adventure = "4.24.0"
+adventure = "4.25.0"
 examination = "1.3.0"
 option = "1.1.0"
-adventurePlatformMod = "6.6.0"
+adventurePlatformMod = "6.7.0"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.133.4+1.21.8"
+fabricApi = "0.134.0+1.21.9"
 fabricLoader = "0.17.2"
-cardinalComponents = "7.0.0-beta.1"
+cardinalComponents = "7.1.0-beta.1"
 guice = "7.0.0"
-neoforge = "21.8.46"
-neoform = "1.21.8-20250717.133445"
+neoforge = "21.9.15-beta"
+neoform = "1.21.9-20250930.151910"
 htmlSanitizer = "20240325.1"
 resource-factory = "1.3.1"
 
