Enable config caching

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,5 @@ githubUrl=https://github.com/jpenilla/squaremap/
 
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 org.gradle.jvmargs=-Xmx3G
