Update for 1.21.11 release

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ resource-factory-fabric = { id = "xyz.jpenilla.resource-factory-fabric-conventio
 resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-convention", version.ref = "resource-factory" }
 
 [versions]
-minecraft = "1.21.11-pre3"
+minecraft = "1.21.11"
 checkerQual = "3.50.0"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-SNAPSHOT"
@@ -19,15 +19,15 @@ configurate = "4.2.0"
 adventure = "4.25.0"
 examination = "1.3.0"
 option = "1.1.0"
-adventurePlatformMod = "6.8.0-SNAPSHOT"
+adventurePlatformMod = "6.8.0"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.139.3+1.21.11"
+fabricApi = "0.139.4+1.21.11"
 fabricLoader = "0.18.1"
 cardinalComponents = "7.2.0"
 guice = "7.0.0"
-neoforge = "21.11.0-alpha.1.21.11-pre3.20251126.164358"
-neoform = "1.21.11-pre3-20251125.161933"
+neoforge = "21.11.0-beta"
+neoform = "1.21.11-20251209.172050"
 htmlSanitizer = "20240325.1"
 resource-factory = "1.3.1"
 
@@ -37,7 +37,7 @@ sponge-gradle = "2.3.0"
 shadow = "9.2.2"
 mod-publish-plugin = "1.0.0"
 loom = "1.13-SNAPSHOT"
-mdg = "2.0.120"
+mdg = "2.0.122"
 paperweight = "2.0.0-beta.19"
 cloud-build-logic = "0.0.17"
 
