--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,9 +11,9 @@ resource-factory-neoforge = { id = "xyz.jpenilla.resource-factory-neoforge-conve
 minecraft = "1.21.11"
 checkerQual = "3.50.0"
 cloud = "2.0.0"
-cloudMinecraft = "2.0.0-SNAPSHOT"
+cloudMinecraft = "2.0.0-beta.14"
 cloudProcessors = "1.0.0-rc.1"
-cloudModded = "2.0.0-beta.13"
+cloudModded = "2.0.0-beta.14"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.2.0"
 adventure = "4.25.0"
