--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=xyz.jpenilla
-version=1.3.10
+version=1.3.11-SNAPSHOT
 description=Minimalistic and lightweight world map viewer for Minecraft servers
 
 githubUrl=https://github.com/jpenilla/squaremap/
